[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/Screen/CreateCard/EditEffect/ArgsContainer.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Screen/CreateCard/EditEffect/ConditionBox.gd" type="Script" id=2]

[node name="ConditionContainer" type="HBoxContainer"]
margin_right = 581.0
margin_bottom = 56.0
size_flags_horizontal = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 408.0
margin_bottom = 56.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 408.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="IndexLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 76.0
margin_bottom = 28.0
rect_min_size = Vector2( 76, 28 )
custom_colors/font_color = Color( 1, 0.501961, 0.501961, 1 )
text = "cond 1."
align = 1
valign = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 80.0
margin_top = 7.0
margin_right = 130.0
margin_bottom = 21.0
rect_min_size = Vector2( 50, 0 )
text = "Type :"

[node name="CondTypeOptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 134.0
margin_right = 408.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 408.0
margin_bottom = 56.0

[node name="ForceCheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer2"]
margin_right = 69.0
margin_bottom = 24.0
pressed = true
text = "Force?"

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 73.0
margin_right = 123.0
margin_bottom = 14.0
rect_min_size = Vector2( 50, 0 )
size_flags_vertical = 0
text = "Value :"
valign = 1

[node name="ValueTypeOptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer2"]
margin_left = 127.0
margin_right = 408.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Label" type="Label" parent="."]
margin_left = 412.0
margin_right = 462.0
margin_bottom = 14.0
rect_min_size = Vector2( 50, 0 )
size_flags_vertical = 0
text = "Args :"

[node name="AllArgsContainer" parent="." instance=ExtResource( 1 )]
margin_left = 466.0

[node name="RemoveCondBtn" type="Button" parent="."]
margin_left = 551.0
margin_right = 581.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
text = "x"

[connection signal="pressed" from="RemoveCondBtn" to="." method="_on_RemoveCondBtn_pressed"]
